--- a/app/components/home/home.component.html
+++ b/app/components/home/home.component.html
@@ -1,1 +1,3 @@
 <h1>Welcome Home</h1>
+<h5 *ngIf="auth.authenticated()">You are loggen in</h5>
+<h5 *ngIf="!auth.authenticated()">You are not loggen in, please click on sign in link above</h5>
